--- a/安卓学习01.md
+++ b/安卓学习01.md
@@ -11,7 +11,22 @@ override fun onCreateOptionsMenu(menu: Menu?): Boolean {
     setIcon(layoutButton)
     return true
 }
+
+    //检测点击菜单键
+    override fun onOptionsItemSelected(item: MenuItem): Boolean {
+        return when(item.itemId){
+            R.id.action_switch_layout->{
+                isLinearLayoutManager= !isLinearLayoutManager
+                chooseLayout()
+                setIcon(item)
+                return true
+            }
+            else->super.onOptionsItemSelected(item)
+        }
+    }
 ```
 
 ## 伴生对象（在类里定义常量）
+
+使用`companion class object(){}`定义常量，类中的数据都用`const`定义
 
