--- a/安卓学习01.md
+++ b/安卓学习01.md
@@ -30,3 +30,33 @@ override fun onCreateOptionsMenu(menu: Menu?): Boolean {
 
 使用`companion class object(){}`定义常量，类中的数据都用`const`定义
 
+## kotlin中的控制流
+
+`when`类似于Java中的`switch`语句
+
+```kotlin
+when (x) {
+    1 -> print("x == 1")
+    2 -> print("x == 2")
+    else -> { // Note the block
+        print("x is neither 1 nor 2")
+    }
+}
+```
+
+## 生命周期
+
+![image-20210912101053630](E:\5_notes\android note\安卓学习01.assets\image-20210912101053630-16314126556141.png)
+
+在模拟器中切换最近的应用时，会重新调用`onStart()`方法
+
+![image-20210912103021512](E:\5_notes\android note\安卓学习01.assets\image-20210912103021512-16314138228952.png)
+
+```kotlin
+//在activity销毁时保存部分信息的函数
+override fun onSaveInstanceState(outState: Bundle, outPersistentState: PersistableBundle) {
+    super.onSaveInstanceState(outState, outPersistentState)
+    Log.d(TAG,"onSaveInstanceState Called")
+}
+```
+
