--- a/安卓学习01.md
+++ b/安卓学习01.md
@@ -46,11 +46,11 @@ when (x) {
 
 ## 生命周期
 
-![image-20210912101053630](E:\5_notes\android note\安卓学习01.assets\image-20210912101053630-16314126556141.png)
+![msedge_KmNvzM1RA0](安卓学习01.assets/msedge_KmNvzM1RA0-16314153139031.png)
 
 在模拟器中切换最近的应用时，会重新调用`onStart()`方法
 
-![image-20210912103021512](E:\5_notes\android note\安卓学习01.assets\image-20210912103021512-16314138228952.png)
+![msedge_5u0f9cErLC](安卓学习01.assets/msedge_5u0f9cErLC-16314153254752.png)
 
 ```kotlin
 //在activity销毁时保存部分信息的函数
