--- a/安卓学习02.md
+++ b/安卓学习02.md
@@ -1,2 +1,20 @@
 # 安卓学习02
 
+## fragment 生命周期
+
+![image-20210912131334106](安卓学习02.assets/image-20210912131334106.png)
+
+![image-20210912131404946](安卓学习02.assets/image-20210912131404946.png)
+
+## ?和！！的使用
+
+![image-20210912133736518](安卓学习02.assets/image-20210912133736518.png)
+
+## 代码规范
+
+使用下划线开头的变量一般不可以直接访问：`_binding` 
+
+## Jetpack Navigation组件
+
+![image-20210912143952024](安卓学习02.assets/image-20210912143952024.png)
+
