--- a/安卓学习03.md
+++ b/安卓学习03.md
@@ -70,3 +70,32 @@ val count: Int
 
 ![image-20210915154552802](安卓学习03.assets/image-20210915154552802.png)
 
+## LiveData
+
+是一种具有生命周期感知能力、可观察的数据存储器类
+
+LiveData的部分特性如下：
+
+- 可存储数据；Livedata是一种可存储任何类型的数据的封装容器
+- LiveData是可观察的，意味着当LiveData对象存储的数据发生更改时，观察器会收到通知
+- LiveData具有哦生命周期感知能力。当将观察器附加到LiveData后，观察器就会与LifecycleOwner（通常是Activity和Fragment）相关联。LiveData仅更新处于活跃生命周期状态的观察器。
+
+## 视图绑定
+
+使用绑定好的视图中的数据可以直接通过binding.类型，可以避免使用findviewbyId
+
+### 视图绑定使用方法：
+
+![image-20210917165437032](安卓学习03.assets/image-20210917165437032-16318688793491.png)
+
+为某个模块启用视图绑定功能后，系统会为该模块中包含的每个XML布局文件生成一个绑定类。每个绑定类均包含对根视图以及具有ID的所有视图的引用。系统会通过一下方式生成绑定类的名称：将XML文件的名称转换为驼峰式大小写，并在末尾添加“Binding”一词。
+
+```xml
+<LinearLayout ... >
+        <TextView android:id="@+id/name" />
+        <ImageView android:cropToPadding="true" />
+        <Button android:id="@+id/button"
+            android:background="@drawable/rounded_button" />
+    </LinearLayout>
+```
+
