--- a/安卓学习03.md
+++ b/安卓学习03.md
@@ -99,3 +99,23 @@ LiveData的部分特性如下：
     </LinearLayout>
 ```
 
+## 数据绑定
+
+数据绑定是将数据（从代码）绑定到视图+视图绑定（将视图绑定到代码）
+
+在界面控制器中使用视图绑定的示例：
+
+```kotlin
+binding.textViewUnscrambledWord.text = viewModel.currentScrambledWord
+```
+
+在布局文件中使用数据绑定的示例
+
+```xml
+android:text="@{gameViewModel.currentScrambledWord}"
+```
+
+### 数据绑定的优势：
+
+可以移除activity中的许多界面框架调用，使其维护起来更简单、方便。还可以提高应用性能，并且有助于防止内存泄漏以及避免发生Null指针异常。
+
