--- a/安卓学习03.md
+++ b/安卓学习03.md
@@ -119,3 +119,86 @@ android:text="@{gameViewModel.currentScrambledWord}"
 
 可以移除activity中的许多界面框架调用，使其维护起来更简单、方便。还可以提高应用性能，并且有助于防止内存泄漏以及避免发生Null指针异常。
 
+### 数据绑定的初始化：
+
+#### 第 1 步：将视图绑定更改为数据绑定
+
+1. 在 `build.gradle(Module)` 文件中的 `buildFeatures` 部分下，启用 `dataBinding` 属性。
+
+将
+
+```
+buildFeatures {
+   viewBinding = true
+}
+```
+
+替换为
+
+```
+buildFeatures {
+   dataBinding = true
+}
+```
+
+当 Android Studio 提示时，执行 Gradle 同步。
+
+1. 若要在任何 Kotlin 项目中使用数据绑定，应当应用 `kotlin-kapt` 插件。我们已在 `build.gradle(Module)` 文件中代您完成此步骤。
+
+```
+plugins {
+   id 'com.android.application'
+   id 'kotlin-android'
+   id 'kotlin-kapt'
+}
+```
+
+上述步骤会为应用中的每个布局 XML 文件自动生成绑定类。如果布局文件名是 `activity_main.xml`，那么自动生成的类将被命名为 `ActivityMainBinding`。
+
+#### 第 2 步：将布局文件转换为数据绑定布局
+
+数据绑定布局文件略有不同，以根标记 `<layout>` 开头，后跟可选 `<data>` 元素和 `view` 根元素。此 view 元素就是非绑定布局文件中的根。
+
+1. 打开 `game_fragment.xml`，选择 **code** 标签页。
+2. 为了将布局转换为数据绑定布局，请将根元素封装在 `<layout>` 标记中。您还必须将命名空间定义（以 `xmlns:` 开头的属性）移至新的根元素。在根元素上方的 `<layout>` 标记内，添加 `<data></data>` 标记。Android Studio 提供了一种便捷方式来自动执行此操作：右键点击根元素 (`ScrollView`)，然后依次选择 **Show Context Actions** > **Convert to data binding layout**
+
+![f356fc45e8fe91b1.png](安卓学习03.assets/f356fc45e8fe91b1.png)
+
+您的布局应如下所示：
+
+```
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+   xmlns:app="http://schemas.android.com/apk/res-auto"
+   xmlns:tools="http://schemas.android.com/tools">
+
+   <data>
+
+   </data>
+
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+       <androidx.constraintlayout.widget.ConstraintLayout
+         ...
+       </androidx.constraintlayout.widget.ConstraintLayout>
+   </ScrollView>
+</layout>
+```
+
+在 `GameFragment` 中的 `onCreateView()` 方法开头，将 `binding` 变量的实例化更改为使用数据绑定。
+
+将
+
+```
+binding = GameFragmentBinding.inflate(inflater, container, false)
+```
+
+替换为
+
+```
+binding = DataBindingUtil.inflate(inflater, R.layout.game_fragment, container, false)
+```
+
+编译代码；您应该能够不出任何错误地顺利编译。应用现在使用的是数据绑定，布局中的视图可以访问应用数据。
+
